--- a/src/components/EntryForm.css
+++ b/src/components/EntryForm.css
@@ -1,6 +1,28 @@
+.entry-form {
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
+
+.form-button {
+    margin-left: 12px;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    background-color: #4988F2;
+    box-shadow: 4px 8px 15px -7px rgba(30, 166, 250, 0.36);
+    color: #FFFFFF;
+    font-weight: bold;
+    /*position: absolute;*/
+    border:none;
+    border-radius:10px;
+    padding:12px;
+    min-height:30px;
+    min-width: 160px;
+}
+
 #input-box {
     border: 1px solid black;
+    border-radius:10px;
     padding: 10px;
-    width: 30%;
+    min-width: 30%;
     height: 60px;
 }
